# long-horizon-benchmark

./: DATA_LICENSE  README.md  pyproject.toml
data/background_docs/DEMO-001/: doc_001.txt
data/scenarios/industrial/: DEMO-001.json
docs/superpowers/plans/: 2026-05-20-data-pipeline-implementation.md  2026-05-20-longhorizon-bench-implementation.md
docs/superpowers/specs/: 2026-05-20-data-pipeline-design.md  2026-05-20-longhorizon-bench-design.md
longhorizon_bench/: __init__.py  env.py  loader.py  schema.py
longhorizon_bench/evaluation/: consistency.py  metrics.py  scorer.py
longhorizon_bench/pipeline/: __init__.py  assembler.py  atom_generator.py  atom_validator.py  bg_generator.py  chain_composer.py  cli.py  clustering.py  committee_reviewer.py  downloader.py  event_filler.py  llm_client.py  simulation_validator.py  structural_validator.py
longhorizon_bench/runners/: __init__.py  base.py  openai_runner.py
longhorizon_bench/tools/: __init__.py  common.py  industrial.py  registry.py
scripts/: validate_scenario.py
tests/: conftest.py  test_assembler.py  test_atom_generator.py  test_atom_validator.py  test_bg_generator.py  test_chain_composer.py  test_clustering.py  test_committee_reviewer.py  test_consistency.py  test_downloader.py  test_env.py  test_event_filler.py  test_integration.py  test_llm_client.py  test_loader.py  test_metrics.py  test_pipeline_cli.py  test_pipeline_e2e.py  test_runner.py  test_schema.py  test_scorer.py  test_simulation_validator.py  test_structural_validator.py  test_tools.py
