[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longhorizon-bench"
version = "0.1.0"
description = "Chinese long-horizon benchmark for LLM evaluation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
openai = [
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
